@@ -1,6 +1,8 @@
 0.13
  - Add check for year in interval of 'dt_from' and 'dt_to' in
    random_year().
+ - Add check for year/month in interval of 'dt_from' and 'dt_to' in
+   random_year_month().
  - Add Random::Day::InTheFuture object.
  - Add Random::Day::InThePast object.
  - Fix test dependencies.
